# UWM-Research

./: .gitignore  README.md  pyproject.toml
generated_microstructures/: Dream3D_microstructure_pipeline-BasementPC.json  Dream3D_microstructure_pipeline.json  El_pos_0.p  FeatureData_FakeMatl_0.csv  FeatureData_FakeMatl_1.csv  FeatureData_FakeMatl_10.csv  FeatureData_FakeMatl_100.csv  FeatureData_FakeMatl_101.csv  FeatureData_FakeMatl_102.csv  FeatureData_FakeMatl_103.csv  FeatureData_FakeMatl_104.csv  FeatureData_FakeMatl_105.csv  FeatureData_FakeMatl_106.csv  FeatureData_FakeMatl_107.csv  FeatureData_FakeMatl_108.csv  FeatureData_FakeMatl_109.csv  FeatureData_FakeMatl_11.csv  FeatureData_FakeMatl_110.csv  FeatureData_FakeMatl_111.csv  FeatureData_FakeMatl_112.csv  FeatureData_FakeMatl_113.csv  FeatureData_FakeMatl_114.csv  FeatureData_FakeMatl_115.csv  FeatureData_FakeMatl_116.csv  FeatureData_FakeMatl_117.csv  FeatureData_FakeMatl_118.csv  FeatureData_FakeMatl_119.csv  FeatureData_FakeMatl_12.csv  FeatureData_FakeMatl_120.csv  FeatureData_FakeMatl_121.csv  FeatureData_FakeMatl_122.csv  FeatureData_FakeMatl_123.csv  FeatureData_FakeMatl_124.csv  FeatureData_FakeMatl_125.csv  FeatureData_FakeMatl_126.csv  FeatureData_FakeMatl_127.csv  FeatureData_FakeMatl_128.csv  FeatureData_FakeMatl_129.csv  FeatureData_FakeMatl_13.csv  FeatureData_FakeMatl_130.csv  (+1935 more)
notebooks/: Create_Dataset.ipynb  GNN_Hyperparameter_Tuning.ipynb  Generate Microstructures.ipynb  Generate_Microstructures.ipynb  Notebook_Errors.ipynb  Research_Plan.md  Surface_Feature_GNN.ipynb  _3_Create_Dataset.ipynb  (+6 more)
(+20 files in other folders)
