[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Shamit Surana <shamit.surana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
networkx = "^3.1"
plotly = "^5.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
